# shadowmesh

./: .env.example  .gitignore  README.md  data_contracts.md  pyproject.toml
agent/: Dockerfile  __init__.py  analyze_rewards.py  collect_evidence.py  compare_policies.py  contracts.py  environment.py  evaluate.py  executor.py  export_sessions.py  infer.py  package_evidence.py  policies.py  requirements.txt  reward.py  runner.py  runtime.py  train.py
attacker/: .dockerignore  Dockerfile  requirements.txt  simulate.py
attacker/wordlists/: passwords.txt
docs/: CONTRIBUTING.md  EVIDENCE_WORKFLOW.md
generative/: generator.py  requirements.txt
infra/: cowrie.cfg  docker-compose.yml  userdb.txt
logging/: .dockerignore  Dockerfile  forwarder.py  requirements.txt
rules/: __init__.py  generator.py
tests/: test_agent_contracts.py  test_attacker_simulate.py  test_collect_evidence.py  test_compare_policies.py  test_evaluate.py  test_executor.py  test_forwarder.py  test_generative_generator.py  test_infer.py  test_package_evidence.py  test_rules_generator.py  test_runner.py  test_train.py
